# grin-wallet-ios

./: .gitattributes  .gitignore  README.md  build-ffi.sh
GrinWalletFFI.xcframework/: Info.plist
GrinWalletFFI.xcframework/ios-arm64/Headers/: grin_wallet_ffi.h  module.modulemap
docs/: privacy-policy.html
grin-ios/: ContentView.swift  InfoAdditions.plist  grin_iosApp.swift
grin-ios.xcodeproj/: project.pbxproj
grin-ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
grin-ios/Assets.xcassets/GrinLogo.imageset/: Contents.json
grin-ios/Components/: AmountDial.swift  AnimatedQRCodeView.swift  BalanceCard.swift  NearbyPeerRow.swift  NodeStatusBadge.swift  QRCodeView.swift  QRScannerView.swift  SlatepackDisplay.swift  TransactionDetailView.swift  TransactionRow.swift  TransactionRowSimple.swift
grin-ios/Models/: PasswordStrength.swift  Settings.swift  Transaction.swift  WalletStore.swift  WalletTypes.swift
grin-ios/Services/: GrinWalletBridge.swift  KeychainManager.swift  NearbyService.swift  NodeConnection.swift  PhoneToWatchService.swift  SlatepackService.swift  SlatepackStore.swift  WalletService.swift
grin-ios/Views/: CreateWalletSheet.swift  HomeView.swift  NearbyView.swift  OnboardingView.swift  OutputsView.swift  ReceiveView.swift  RestoreWalletSheet.swift  ResumeTransactionView.swift  SendView.swift  SettingsView.swift  SlatepackView.swift  SplitOutputsView.swift  TransactionsView.swift  UnlockView.swift
grin-wallet-ffi/: Cargo.toml
grin-wallet-ffi/src/: lib.rs
